# esp-soil-meter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c  soil_meter.pb.c  soil_meter.pb.h
